feat: pre-commit